--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
         </div>
       </div>
 
-      <p class="text-center" id="copyright">Copyright &copy; 2020. This template design and develop by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
+      <p class="text-center" id="copyright">Copyright &copy; 2022. developed by Abdulh Gaber</p>
     </div>
   </footer>
 
